--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
