--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup-dbs.sql",
     "seed-dev": "node ./db/seeds/run-seed.js",
-    "seed-prod": "NODE_ENV=production node ./db/seeds/run-seed.js",
+    "seed-prod": "cross-env NODE_ENV=production node ./db/seeds/run-seed.js",
     "test": "jest",
     "prepare": "husky install",
     "start": "node listen.js",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
