--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,27 @@
-# .github/workflows/ci.yml
-
 on:
-  pull_request:
   push:
     branches: [main]
+  pull_request:
 
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Test
         run: |
           npm install
           npm run test
 
-      - name: Deploy
-        # Only run this step if the branch is main
-        if: github.ref == 'refs/heads/main'
+      - name: Deploy to Render
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
-          curl "$deploy_url"
+          response=$(curl -s -o /dev/null -w "%{http_code}" "$deploy_url")
+          echo "Deploy hook response: $response"
+          if [ "$response" -ne 200 ]; then
+            echo "Deploy failed"
+            exit 1
+          fi
